--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 </head>
   <body>
     <main>
-        <header><h1>Todo Tehtävä Lista</h1></header>
-        <section>
+      <header><h1>Todo Tehtävä Lista</h1></header>
+      <section>
           <h3>Lisää tehtävä:</h3>
-          <div id="inputBox">
-            <label for="inputValue"></label>
-            <input type="text" id="inputValue" required>
-            <button type="submit" id="Btn">Lisää</button>
-          </div>
-          <div id="listBox">
-            <ol></ol>
-          </div>
-          <div id="lastBox">
-            <button id="removeLast">Poista Edellinen</button>
-          </div>
-          <div id="resetBox">
-            <button id="reset">Poista Kaikki</button>
-           
-          </div>
-        </section>
-      </main>
+<div></div>
+  <form name="myForm" id="todoForm">
+      <input id="todoInput" name="name" required>
+      <button type="button" onclick="myFunction()">Lisää</button>
+    </form>
+    <ol id="todoList"></ol>
+ </div>
+ <div id="listBox">
+  <ol></ol>
+</div>
+<div id="lastBox">
+  <button id="removeLast">Poista Edellinen</button>
+</div>
+<div id="resetBox">
+  <button id="reset">Poista Kaikki</button>
+</div>
+      </section>
+    </main>
 
   <script src="todo.js"></script>
   </body>
