--- a/index.html
+++ b/index.html
@@ -13,25 +13,20 @@
       <header><h1>Todo Tehtävä Lista</h1></header>
       <section>
           <h3>Lisää tehtävä:</h3>
-<div></div>
+
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
-      <button type="button" onclick="myFunction()">Lisää</button>
+      <button type="button" onclick="Funktio()">Lisää</button>
     </form>
     <ol id="todoList"></ol>
- </div>
- <div id="listBox">
-  <ol></ol>
-</div>
 <div id="lastBox">
   <button id="removeLast">Poista Edellinen</button>
 </div>
 <div id="resetBox">
   <button id="reset">Poista Kaikki</button>
-</div>
+  </div>
       </section>
     </main>
-
   <script src="todo.js"></script>
   </body>
 </html>
