--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h3>Lisää tehtävä:</h3>
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
-      <button type="button" onclick="Funktio()">Lisää</button>
+      <button type="button" id="button" onclick="Funktio()">Lisää</button>
     </form>
     <ol id="todoList"></ol>
   <button id="removeLast">Poista Edellinen</button>
