--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
   <body>
     <main>
-      <header><h1>Todo Tehtävä Lista</h1></header>
+      <header><h1>Todo Tehtävälista</h1></header>
       <section>
           <h3>Lisää tehtävä:</h3>
   <form name="myForm" id="todoForm">
