--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
   <body>
     <main>
-      <header><h1>Todo Tehtävälista</h1></header>
+      <header><h1>ToDo Ostoslista</h1></header>
       <section>
-          <h3>Lisää tehtävä:</h3>
+          <h3>Kauppaostokset:</h3>
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
-      <button type="button" id="button" onclick="Funktio()">Lisää</button>
+      <button id="button" onclick="Funktio()">Lisää</button>
     </form>
     <ol id="todoList"></ol>
   <button id="removeLast">Poista Edellinen</button>
