--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
   <body>
     <main>
-      <header><h1>ToDo Ostoslista</h1></header>
+      <header><h1>Kauppa ostoslista</h1></header>
       <section>
-          <h3>Kauppaostokset:</h3>
+          <h2>Lisää ostos</h2>
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
       <button id="button" onclick="Funktio()">Lisää</button>
     </form>
-    <ol id="todoList"></ol>
-  <button id="removeLast">Poista Edellinen</button>
-  <button id="reset">Poista Kaikki</button>
       </section>
+      <h3>Kauppaostokset:</h3>
+      <ol id="todoList"></ol>
+      <button id="removeLast">Poista edellinen</button>
+      <button id="reset">Poista kaikki</button>
     </main>
   <script src="todo.js"></script>
   </body>
