--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
   <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-  <title>Tehtävälista app</title>
+  <title>Ostoslista App</title>
 </head>
   <body>
     <main>
-      <header><h1>Kauppa ostoslista</h1></header>
+      <header><h1>Kauppa ostoslista App</h1></header>
       <section>
           <h2>Lisää ostos</h2>
   <form name="myForm" id="todoForm">
