--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
   <body>
     <main>
-      <header><h1>Kauppa ostoslista App</h1></header>
+      <header><h1>Ostoslista App</h1></header>
       <section>
           <h2>Lisää ostos</h2>
   <form name="myForm" id="todoForm">
