--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
   <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-  <title>Ostoslista App</title>
+  <title>ToDo Projekti 1</title>
 </head>
   <body>
     <main>
       <header><h1>Ostoslista App</h1></header>
       <section>
-          <h2>Lisää ostos</h2>
+          <h2>Lisää ostoksia listaan</h2>
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
       <button id="button" onclick="Funktio()">Lisää</button>
