--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>ToDo Projekti 1</title>
 </head>
   <body>
+    <header><h1>Ostoslista App</h1></header>
     <main>
-      <header><h1>Ostoslista App</h1></header>
       <section>
           <h2>Lisää ostoksia listaan</h2>
   <form name="myForm" id="todoForm">
@@ -23,7 +23,7 @@
       <button id="removeLast">Poista edellinen</button>
       <button id="reset">Poista kaikki</button>
     </main>
- 
+    <p>Clicks: <a id="clicks">0</a></p>
   <script src="todo.js"></script>
   </body>
 </html>
