--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </form>
       </section>
       <h3>Kauppaostokset:</h3>
-      <ol id="todoList"></ol>
+      <ol id="todoList">
+      </ol>
       <button id="removeLast">Poista edellinen</button>
       <button id="reset">Poista kaikki</button>
     </main>
