--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h2>Lisää ostoksia listaan</h2>
   <form name="myForm" id="todoForm">
       <input id="todoInput" name="name" required>
-      <button id="button" onclick="Funktio()">Lisää</button>
+      <button id="button" onclick="Funktio(); return false;" >Lisää</button>
     </form>
       </section>
       <h3>Kauppaostokset:</h3>
