--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button id="button" onclick="Funktio(); return false;" >Lisää</button>
     </form>
       </section>
-      <h3>Kauppaostokset:</h3>
+      <h3>Kauppalista:</h3>
       <ol id="todoList">
       </ol>
       <button id="removeLast">Poista edellinen</button>
