--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </ol>
       <button id="removeLast">Poista edellinen</button>
       <button id="reset">Poista kaikki</button>
+    </div>
     </main>
   <script src="todo.js"></script>
   </body>
