--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section>
           <h2>Lisää ostoksia listaan</h2>
   <form name="myForm" id="todoForm">
-      <input id="todoInput" name="name" required>
+      <input id="todoInput" name="name" autocomplete="off" required>
       <button id="button" onclick="Funktio(); return false;" >Lisää</button>
     </form>
       </section>
