--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
   <title>ToDo Projekti 1</title>
 </head>
-  <body onload="loadTodos();">
+  <body>
     <header><h1>Ostoslista App</h1></header>
     <main>
       <section>
