--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
+<!-- TO00BL10-3011 Web sovellusten kehittäminen JavaScriptillä -->
+<!-- DOM Projekti 1 yksinkertainen ostoslista -->
+<!-- Sovelluksessa voi lisätä ostoksia listaan, poistaa niitä ja merkitä tehdyiksi -->
+<!-- HTML tiedosto -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> <!-- Merkistö standardi -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-  <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-  <title>ToDo Projekti 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsiivisuus-->
+  <link rel='stylesheet' type='text/css' media='screen' href='styles.css'> <!-- Oma tyylitiedosto -->
+  <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'> <!-- Google fontti -->
+  <title>ToDo Projekti 1</title> <!-- Sivu otsikko -->
 </head>
-  <body onload="loadTodos();">
-    <header><h1>Ostoslista App</h1></header>
+  <body onload="loadTodos();"> <!-- Lataa todo:t localStoragesta -->
+    <header><h1>Ostoslista App</h1></header> <!-- Otsikko -->
     <main>
       <section>
-          <h2>Lisää ostoksia listaan</h2>
-  <form name="myForm" id="todoForm">
-      <input id="todoInput" name="name" autocomplete="off" required>
-      <button id="button" onclick="Funktio(); return false;" >Lisää</button>
-    </form>
+          <h2>Lisää ostoksia listaan</h2> <!-- Tekstinsyöttökentän otsikko -->
+      <input id="todoInput" name="name" autocomplete="off" required> <!-- Tekstinsyöttökenttä, autocomplete poistaa automaattiset lomaketiedot ja required validointi -->
+      <button id="button" onclick="Funktio(); return false;" >Lisää</button> <!-- Lisää nappi, onclick funktio + false ei lataa sivua uusiksi -->
       </section>
-      <h3>Kauppalista:</h3>
-      <ol id="todoList">
+      <h3>Kauppalista:</h3> <!-- listan otsikko -->
+      <ol id="todoList"> <!-- lista -->
       </ol>
-      <button id="removeLast">Poista edellinen</button>
-      <button id="reset">Poista kaikki</button>
-      
+      <button id="removeLast">Poista edellinen</button> <!-- Poista edellinen nappi -->
+      <button id="reset">Poista kaikki</button> <!-- Poista kaikki nappi -->
     </main>
-  <script src="todo.js"></script>
+  <script src="todo.js"></script>  <!-- JavaScript tiedosto  -->
   </body>
 </html>
